--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@ h1{
 }
 
 img{
-    width: 80px;
+    width: 200px;
     margin: 0 10px;
 }
 
 .nav{
     width: 100%;
     height: 100px;
-    background-color: #313552;
+    background-color: #041e54;
     display: flex;
     align-items: center;
 }
@@ -31,9 +31,6 @@ img{
     display: flex;
     align-items: center;
     gap: 2%;
-}
-.navbar img{
-    filter: invert(1);
 }
 
 .container{
@@ -168,4 +165,9 @@ textarea{
     border: none;
     outline: none;
     background: #0077ff;
+}
+
+form .row{
+    display: flex;
+    flex-direction: column;
 }
