--- a/style.css
+++ b/style.css
@@ -19,6 +19,24 @@ img{
     margin: 0 10px;
 }
 
+.cross,.plus{
+    width: 20px;
+    cursor: pointer;
+}
+
+.cross{
+    filter: invert(85%) sepia(46%) saturate(5520%) hue-rotate(313deg) brightness(103%) contrast(83%);
+}
+
+.plus{
+    filter: invert(9%) sepia(62%) saturate(3147%) hue-rotate(215deg) brightness(91%) contrast(103%);
+}
+
+.plus:hover{
+    width: 24px;
+    transition: all 0.1s;
+}
+
 .nav{
     width: 100%;
     height: 100px;
