--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ table{
     background: rgba(0,0,0,0.4);
 }
 
+.popup-box-show{
+    opacity: 1;
+}
+
 .popup-box .popup{
     position: absolute;
     top: 50%;
@@ -160,7 +164,7 @@ table{
 
 textarea{
     width: 100%;
-    height: 80px;
+    height: 150px;
     margin: 10px 0;
     resize: none;
 }
